memperbaiki isi teks

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
       </div>
       <div class="row justify-content-center fs-5">
         <div class="col-4">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt eius atque doloremque quod aspernatur culpa sint totam? Maiores maxime nesciunt esse quaerat doloribus asperiores veniam velit odit nostrum exercitationem. Doloribus?
+          I'm a junior Front-end Developer. I started all of this at 17 years old, when i want to begin my college study. Besides of IT, i also interest with adventures, workouts, books, and games. Sorry if my english not good yet, i'm still learning and this text i write without dictionary, i realize that this text has a terrible tenses.
         </div>
         <div class="col-4">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi deleniti nihil totam non harum corrupti voluptas voluptatibus commodi, culpa laborum, quos odit ipsum accusantium quis, nesciunt quidem alias cumque at?
+          I'm studying at Universitas Dian Nuswantoro Semarang. I'll start my study on this July as a new student. I've graduated from SDN Kalibakung 01, SMPN 1 Lebaksiu, and SMAN 2 Slawi.
         </div>
       </div>
     </div>
@@ -83,7 +83,7 @@
           <img src="assets/bookshelf.png" class="card-img-top" alt="bookshelf">
           <div class="card-body">
             <h5 class="card-title">Bookshelf Apps</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">This is a web-based apps i've created when i study on dicoding academies.</p>
           </div>
         </div>
       </div>
@@ -92,7 +92,7 @@
           <img src="assets/enejdi.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Enejdi Site</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">This is a simple beginner website i've created when i watching WPU youtube channels.</p>
           </div>
         </div>
       </div>
@@ -101,7 +101,7 @@
           <img src="assets/todo.png" class="card-img-top" alt="todo">
           <div class="card-body">
             <h5 class="card-title">Todo Apps</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">This is a web-based apps i've created when i study on dicoding academies.</p>
           </div>
         </div>
       </div>
@@ -137,7 +137,7 @@
             <label for="exampleFormControlTextarea1" class="form-label">Message</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
-          <button type="submit" class="btn btn-primary">Send</button>
+          <button type="submit" class="btn btn-primary" disabled>Send</button><p>this form is in maintenance, not active yet, sorry...</p>
         </form>
       </div>
     </div>
